<resources>
    <string name="app_name">E-DoIt</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="or">OR</string>

    <!-- Strings related to user -->
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_pass">Forget Password</string>
    <string name="register_as">I want to register as</string>
    <string name="employer">Employer</string>
    <string name="guest">Guest</string>
    <string name="email">Email Address</string>
    <string name="reset_pass">Reset Your Password</string>
    <string name="request">Request</string>

    <!-- Strings related to payment -->
    <string name="cash">Cash on Delivery</string>
    <string name="paypal">PayPal</string>



</resources>
