<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="com.e_doit.e_doit.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/email"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="text"
            android:layout_marginBottom="24dp"
            android:hint="@string/username"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/input_pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/input_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/link_forget_pass"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:text="@string/register_as"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="center"/>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="4.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_employer"
                android:onClick="employer"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:text="@string/employer"
                android:layout_weight="1.0"
                android:background="@drawable/button" />

            <Button
                android:id="@+id/btn_guest"
                android:onClick="guest"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:text="@string/guest"
                android:layout_weight="1.0"
                android:background="@drawable/button" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:onClick="signup"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/register"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

    </LinearLayout>
</ScrollView>