<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fitsSystemWindows="true"
tools:context="com.e_doit.e_doit.PaymentActivit">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <Button
            android:id="@+id/btn_register"
            android:onClick=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cash"
            android:padding="12dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/link_forget_pass"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/or"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_login"
            android:onClick=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/paypal"
            android:padding="12dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</ScrollView>
