<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="com.e_doit.e_doit.GuestProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/profile_bg"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:background="@drawable/profile_icon"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="21sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"/>

            <View
                android:layout_width="30dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:background="@color/darkgrey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">



        </LinearLayout>

    </LinearLayout>
</ScrollView>